<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFE504"
    tools:context=".SelectionActivity">

    <Button
        android:id="@+id/b_save2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:onClick="help2"
        android:text="@string/help"
        android:textColor="@android:color/black"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/b_save5"
        app:layout_constraintTop_toBottomOf="@+id/b_save5" />

    <Button
        android:id="@+id/b_save4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:onClick="help3"
        android:text="@string/help"
        android:textColor="@android:color/black"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/b_save2"
        app:layout_constraintTop_toBottomOf="@+id/b_save2" />

    <Button
        android:id="@+id/b_save5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:onClick="help1"
        android:text="@string/help"
        android:textColor="@android:color/black"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/textView3"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:text="@string/selection"
        android:textColor="@android:color/holo_red_dark"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/b_load"
        android:layout_width="275sp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:height="50sp"
        android:background="#5709E3"
        android:text="@string/b1"
        android:textColor="@android:color/background_light"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView9" />

    <Button
        android:id="@+id/b_save"
        android:layout_width="120sp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="#5709E3"
        android:onClick="format1Opr"
        android:text="@string/save1"
        android:textColor="@android:color/background_light"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/textView3"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <EditText
        android:id="@+id/fileName"
        android:layout_width="220dp"
        android:layout_height="49dp"
        android:layout_marginTop="32dp"
        android:height="50sp"
        android:background="@android:color/background_light"
        android:ems="10"
        android:hint="@string/save_as"
        android:inputType="textPersonName"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColor="@android:color/background_dark"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/b_load" />

    <Button
        android:id="@+id/button2"
        android:layout_width="120sp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="#5709E3"
        android:onClick="format2Opr"
        android:text="@string/save2"
        android:textColor="@android:color/background_light"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/b_save"
        app:layout_constraintTop_toBottomOf="@+id/b_save" />

    <Button
        android:id="@+id/button3"
        android:layout_width="120sp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="#5709E3"
        android:onClick="format3Opr"
        android:text="@string/save3"
        android:textColor="@android:color/background_light"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/button2"
        app:layout_constraintTop_toBottomOf="@+id/button2" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="221dp"
        android:layout_height="91dp"
        android:text="@string/according"
        android:textColor="@android:color/primary_text_light"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fileName" />

</androidx.constraintlayout.widget.ConstraintLayout>